--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset=utf-8 />
 	<title>Bar Lawrence</title>
 	<link rel="stylesheet" type="text/css" media="screen, projection" href="assets/style.css" />
+	<link href="assets/webfonts/ss-social.css" rel="stylesheet" />
 	<script type="text/javascript" src="//use.typekit.net/tpm0tpl.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
@@ -22,6 +23,7 @@
   <footer>
     <h4>Menu updates daily, by invite only.</h4>
     <p>&copy; 2012 Bar Lawrence</p>
+    <p><a href="http://twitter.com/barlawrence" target="_blank" class="ss-twitter">@barlawrence</a></p>
   </footer>
 
 </body>
