--- a/Default.html
+++ b/Default.html
@@ -5,6 +5,7 @@
 	<title>{site.title} | {title}</title>
 	<link rel="stylesheet" type="text/css" media="screen, projection" href="./assets/style.css" />
 	<link href="./assets/webfonts/ss-social.css" rel="stylesheet" />
+	<link rel="alternate" type="application/rss+xml" title="oak: Blog (RSS)" href="http://feeds.feedburner.com/BarLawrence" />
 	<script type="text/javascript" src="//use.typekit.net/tpm0tpl.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
@@ -39,6 +40,7 @@
   <footer>
     <p>&copy; 2012 {site.title}</p>
     <p><a href="http://twitter.com/barlawrence" target="_blank" class="ss-twitter">@barlawrence</a></p>
+    <p><small><a href="http://feeds.feedburner.com/BarLawrence" target="_blank" class="ss-icon">RSS</a></small></p>
   </footer>
 
 </body>
