--- a/Default.html
+++ b/Default.html
@@ -12,7 +12,7 @@
 <body>
 
 	<header>
-		<h1><a href="./"><img src="./assets/logo.png" alt="{site_title}"/></a></h1>
+		<h1><a href="./"><img src="./assets/logo.png" alt="{site.title}"/></a></h1>
 	</header>
 	
 	{if posts}
