--- a/index.html
+++ b/index.html
@@ -1,46 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset=utf-8 />
-	<title>Bar Lawrence</title>
-	<link rel="stylesheet" type="text/css" media="screen, projection" href="assets/style.css" />
-  <link rel="stylesheet" type="text/css" href="assets/ss-symbolicons-line.css">
-	<script type="text/javascript" src="//use.typekit.net/tpm0tpl.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <meta charset=utf-8 />
+  <title>Bar Lawrence</title>
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="assets/style.css" />
+  <script type="text/javascript" src="//use.typekit.net/tpm0tpl.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 
-	<header>
-    <small>Est. 2012</small>
-		<h1>
-      <span>Bar Lawrence</span>
-    </h1>
-    <small>Edition #2</small>
-	</header>
+  <header>
+    <h1><img src="assets/logo.png" alt="Bar Lawrence"/></h1>
+  </header>
 
+  <h3>Margarita de Pepino</h3>
+  <p>Repesado tequila, blood orange triple sec, fresh cucumber juice, lime, homemade cilantro syrup, lime salt</p>
 
-  <dl>
-    <dt>Bronx cocktail</dt>
-    <dd><a href="#">Gin</a>, <a href="#">sweet vermouth</a>, <a href="#">dry vermouth</a>, <a href="#">orange juice</a>.</dd>
-    <dt>Screwdriver</dt>
-    <dd><a href="#">Vodka</a>, fresh <a href="#">orange juice</a>.</dd>
-  </dl>
-
-<!--   <dl>
-    <dt>Margarita de Pepino</dt>
-    <dd>Repesado <a href="#">tequila</a>, blood orange <a href="#">triple sec</a>, <a href="#">cucumber juice</a>, <a href="#">lime juice</a>, homemade cilantro syrup, <a href="#">lime salt</a>.</dd>
-
-    <dt>The Gin &amp; Juice</dt>
-    <dd><a href="#">Hendrick’s Gin</a>, fresh <a href="#">cucumber juice</a>, <a href="#">soda</a>.</dd>
-  </dl> -->
+  <h3>The Gin & Juice</h3>
+  <p>Hendrick’s Gin, fresh cucumber juice, soda</p>
 
   <footer>
-    <a href="/archive">Archive</a>
-    <p><b>
-      Menu updates weekly, by invitation only.
-    </b></p>
-    <p>&copy; MMXII Bar Lawrence</p>
-    <i class="ss-cocktail"></i>
+    <h4>Menu updates daily, by invite only.</h4>
+    <p>&copy; 2012 Bar Lawrence</p>
   </footer>
 
 </body>
