--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset=utf-8 />
-	<title>{{#site}}{{title}}{{/site}}{{#archive}} | Archive{{/archive}}</title>
+	<title>{{#site}}{{title}}{{/site}} | {{title}}</title>
 	<link rel="stylesheet" href="/assets/style.css"  />
   <link rel="stylesheet" href="//cdn.symbolset.com/e50f9502fcc9151fb1f671964600efa504506021/symbolset.css" />
 	<link rel="alternate" type="application/rss+xml" title="Bar Lawrence (RSS)" href="http://feeds.feedburner.com/BarLawrence" />
@@ -48,7 +48,7 @@
   {{/entries}}
 
   <footer>
-    <a href="./menu/archive">Archive</a>
+    <a href="/menu/archive">Archive</a>
     <p><b>
       Menu updates weekly, by invitation only.
     </b></p>
